2009-10-27  Antonio Gomes  <tonikitoo@webkit.org>

        Reviewed by Antti Koivisto and Holger Freyther.

        Make QWebPagePrivate's (QWidget) view to be a QWeakPointer.
        https://bugs.webkit.org/show_bug.cgi?id=30779

        The fact that it was been set from external objects of qwebpage
        and not being deleted internally can lead to dangling references.

        * Api/qgraphicswebview.cpp:
        (QGraphicsWebView::~QGraphicsWebView):
        * Api/qwebpage.cpp:
        (QWebPagePrivate::QWebPagePrivate):
        (QWebPagePrivate::createContextMenu):
        (QWebPagePrivate::handleSoftwareInputPanel):
        (QWebPagePrivate::keyPressEvent):
        (QWebPage::setView):
        (QWebPage::view):
        (QWebPage::javaScriptAlert):
        (QWebPage::javaScriptConfirm):
        (QWebPage::javaScriptPrompt):
        (QWebPage::shouldInterruptJavaScript):
        (QWebPage::createWindow):
        (QWebPage::extension):
        (QWebPage::chooseFile):
        (QWebPage::userAgentForUrl):
        * Api/qwebpage_p.h:
        * Api/qwebview.cpp:
        (QWebView::~QWebView):

2009-10-26  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        Unreviewed documentation fix from David Boddie (Qt Doc Team)

        Removes the check around the RenderHints property documentation
        that was clearly added to synchronize the source and header files
        when the #if !defined(Q_OS_SYMBIAN) guards was added to the
        property.

        The documentation has also been updated to ensure that Symbian
        users know that there is no actual RenderHints property on their
        platform.

        * Api/qwebview.cpp:

2009-10-26  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        Unreviewed documentation fix from David Boddie (Qt Doc Team)

        Ensure that qdoc will always see the RenderHints property.

        The property was only defined in the header file if the Q_OS_SYMBIAN